fixed align text in footer

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -530,7 +530,7 @@ footer .footer-wrapper .footer-area .footer-social-icon {
 
 p.footer-mailto-text.kontakt-text {
   margin: 1rem auto;
-  text-align: left;
+  text-align: center;
 }
 
 p.footer-mailto-text.kontakt-text a {
